--- a/ios/CurrencyConverter.xcodeproj/xcshareddata/xcschemes/CurrencyConverter.xcscheme
+++ b/ios/CurrencyConverter.xcodeproj/xcshareddata/xcschemes/CurrencyConverter.xcscheme
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-               BuildableName = "EE-tvOS.app"
-               BlueprintName = "EE-tvOS"
-               ReferencedContainer = "container:EE.xcodeproj">
+               BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
+               BuildableName = "CurrencyConverter.app"
+               BlueprintName = "CurrencyConverter"
+               ReferencedContainer = "container:CurrencyConverter.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -32,10 +32,10 @@
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "2D02E48F1E0B4A5D006451C7"
-               BuildableName = "EE-tvOSTests.xctest"
-               BlueprintName = "EE-tvOSTests"
-               ReferencedContainer = "container:EE.xcodeproj">
+               BlueprintIdentifier = "00E356ED1AD99517003FC87E"
+               BuildableName = "CurrencyConverterTests.xctest"
+               BlueprintName = "CurrencyConverterTests"
+               ReferencedContainer = "container:CurrencyConverter.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -54,10 +54,10 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-            BuildableName = "EE-tvOS.app"
-            BlueprintName = "EE-tvOS"
-            ReferencedContainer = "container:EE.xcodeproj">
+            BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
+            BuildableName = "CurrencyConverter.app"
+            BlueprintName = "CurrencyConverter"
+            ReferencedContainer = "container:CurrencyConverter.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -71,10 +71,10 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-            BuildableName = "EE-tvOS.app"
-            BlueprintName = "EE-tvOS"
-            ReferencedContainer = "container:EE.xcodeproj">
+            BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
+            BuildableName = "CurrencyConverter.app"
+            BlueprintName = "CurrencyConverter"
+            ReferencedContainer = "container:CurrencyConverter.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
