--- a/ios/Podfile
+++ b/ios/Podfile
@@ -77,6 +77,8 @@ target 'CurrencyConverter' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
+  pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-community/async-storage'
+
   target 'CurrencyConverterTests' do
     inherit! :complete
     # Pods for testing
