--- a/package.json
+++ b/package.json
@@ -37,17 +37,28 @@
   },
   "devDependencies": {
     "@babel/core": "^7.10.3",
+    "@babel/plugin-transform-modules-commonjs": "^7.10.1",
     "@babel/runtime": "^7.10.3",
     "@react-native-community/eslint-config": "^2.0.0",
     "babel-jest": "^26.0.1",
     "babel-plugin-module-resolver": "^4.0.0",
     "eslint": "^7.3.0",
     "jest": "^26.0.1",
+    "jest-styled-components": "^7.0.2",
     "metro-react-native-babel-preset": "^0.59.0",
-    "react-test-renderer": "16.11.0"
+    "react-native-testing-library": "^2.1.0",
+    "react-test-renderer": "16.11.0",
+    "redux-mock-store": "^1.5.4"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "transformIgnorePatterns": [
+      "node_modules/(?!@fortawesome/react-native-fontawesome|(?!deck.gl)|ng-dynamic)"
+    ],
+    "moduleNameMapper": {
+      "\\.svg": "<rootDir>/__mocks__/svgMock.js"
+    },
+    "setupFiles": [ "./node_modules/react-native-gesture-handler/jestSetup.js" ]
   },
   "rnpm": {
     "assets": [
